--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                     
 
 
-                    <div class="form-group row "col-sm-2 col-form-label""> 
+                    <div class="form-group row "col-sm-2 col-form-label> 
                         
                         <button type="button" class="btn btn-primary">Reserve</button>
                         </div>  
